LU-4300 ptlrpcd: work around for cl_lock_mutex_get deadlock

Create an extra thread, ptlrpcd_brw, that can continue to
run if a dead lock occurs. This is a temporary solution.

Change-Id: I09c394adf7bf47ac635d0e8198f65e01380c0182
Signed-off-by: Alexey Lyashkov <Alexey_Lyashkov@xyratex.com>
Signed-off-by: James Simmons <uja.ornl@gmail.com>